# bilags

./: README.md  pyproject.toml
bilags/: bilags_config.py  lib_bilagrid.py
