[project]
name = "bilags"
description = "--"
version = "0.1.0"

dependencies = ["nerfstudio >= 1.1.0"] 

[tool.setuptools.packages.find]
include = ["bilags*"]

# register the entry point of your new method here:
[project.entry-points.'nerfstudio.method_configs']
bilags = 'bilags.bilags_config:bilags_config'
